Fixed name in a specifications document

--- a/src/main/webapp/teacherPage.xhtml
+++ b/src/main/webapp/teacherPage.xhtml
@@ -8,7 +8,7 @@
     </ui:define>
 
     <ui:define name="content">
-        Teacher's Page
+        <!--Teacher's Page-->
     </ui:define>
 
 </ui:composition>
