--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,44 +11,28 @@
     </ui:define>
 
     <ui:define name="content">
-        <div class="row">
-            <div class=" offset2 span11" style="background-color: #ffffff">             
-                <p class="text-justify">
-                    Ce site vous permet de créer des séquences didactiques pour la formation des enseignants de FLE.
-                    Il est destiné à la formation au niveau universitaire en Colombie.<br/>
-                    Nous vous proposons de faire des activités au sujet de la linguistique textuelle en trois axes :
-                </p>
-                <ul>
-                    <li>Structuration textuelle (phrases principales ; structuration des textes ; types et séquences textuelles). </li>
-                    <li>Cohérence et cohésion textuelles (coréférence textuelle, connecteurs et marqueurs logico-temporels et discursifs).</li>
-                    <li>Progression thématique (thème et rhème).</li>
-                </ul>
-                <p class="text-justify"><strong>Niveau de progression</strong></p>
-                <p class="text-justify">Nous vous proposons des activités qui vont du niveau B1 au B2, elles sont divisées en 4 phases :</p>
-                <ul>
-                    <li>Phase de découverte</li>
-                    <li>Phase théorique</li>
-                    <li>Phase des activités de systématisation</li>
-                    <li>Phase d'activités d'application des connaissances.</li>
-                </ul>
-                <!--                <div class="span8">
-                                    <div class="btn-group">
-                                        <button  class="btn btn-success" href="#tab1" data-toggle="tab">Inicio</button>
-                                        <button  class="btn btn-success" href="#tab2" data-toggle="tab">¿Quiénes Somos?</button>
-                                        <button  class="btn btn-success" href="#tab3" data-toggle="tab">Nuestras Sucursales</button>
-                                        <button  class="btn btn-success" href="#tab4" data-toggle="tab">Nuestros Precios</button>
-                                    </div>
-                                </div>-->
-                <p:separator id="customSeparator2" style="width:970px;height:5px" />
-            </div>
-
+        <p class="text-justify">
+            Ce site vous permet de créer des séquences didactiques pour la formation des enseignants de FLE.
+            Il est destiné à la formation au niveau universitaire en Colombie.<br/>
+            Nous vous proposons de faire des activités au sujet de la linguistique textuelle en trois axes :
+        </p>
+        <ul>
+            <li>Structuration textuelle (phrases principales ; structuration des textes ; types et séquences textuelles). </li>
+            <li>Cohérence et cohésion textuelles (coréférence textuelle, connecteurs et marqueurs logico-temporels et discursifs).</li>
+            <li>Progression thématique (thème et rhème).</li>
+        </ul>
+        <p class="text-justify"><strong>Niveau de progression</strong></p>
+        <p class="text-justify">Nous vous proposons des activités qui vont du niveau B1 au B2, elles sont divisées en 4 phases :</p>
+        <ul>
+            <li>Phase de découverte</li>
+            <li>Phase théorique</li>
+            <li>Phase des activités de systématisation</li>
+            <li>Phase d'activités d'application des connaissances.</li>
+        </ul>
+        <p:separator id="customSeparator2" style="width:970px;height:5px" />
+        <div class="row span10 offset4 text-center">
+            <a data-toggle="modal" href="#shareModal" class="btn btn-danger">Se connecter</a>
         </div>
-        <div class="row span7 text-center offset5">
-            <h3><a data-toggle="modal" href="#shareModal" class="btn btn-danger">Se connecter</a></h3>
-        </div>
-        <!--        <div class="hero-unit offset2 span10" style="background-color: #000">
-        
-                </div>-->
         <div class="row">
             <div class="span0">
                 <h:form id="shareForm" class="form-horizontal form-no-margin">
