Support view started. List all supports finished, with search by column or in all columns. Vo, Bean, Facade, Service and DAO created for the support. Submit new Support started. It's necessary to complete.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
                 xmlns:h="http://java.sun.com/jsf/html">
 
     <ui:define name="title">
-        Bienvenidos
+        Bienvenu
     </ui:define>
 
     <ui:define name="content">
