--- a/src/main/webapp/teacherPage.xhtml
+++ b/src/main/webapp/teacherPage.xhtml
@@ -35,7 +35,7 @@
             </p:column>
         </p:dataTable>
         <div class="form-actions">
-            <h:commandButton  action="#{loginBean.login()}" value="Nouvelle Séquence" class="btn btn-danger" />            
+            <h:button outcome="newSequence" value="Nouvelle Séquence" class="btn btn-danger"/>            
         </div>
 
     </ui:define>
